team detail mate rank update

--- a/wakemate/wakemate/Info.plist
+++ b/wakemate/wakemate/Info.plist
@@ -8,7 +8,9 @@
 		<true/>
 	</dict>
 	<key>UIAppFonts</key>
-	<array/>
+	<array>
+		<string>Arimo-BoldItalic</string>
+	</array>
 	<key>UIApplicationSceneManifest</key>
 	<dict>
 		<key>UIApplicationSupportsMultipleScenes</key>
